# block-poll-backend

./: .gitignore  Cargo.toml  README.md
client/: package-lock.json  package.json
client/src/: hello_world.ts
program/: Cargo.toml
program/src/: processor.rs
src/: processor.rs
