[package]
name = "block-poll-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.17.2"

[features]
no-entrypoint = []

[lib]
name = "blockpoll"
crate-type = ["cdylib", "lib"]
